--- a/css/basic.css
+++ b/css/basic.css
@@ -8,29 +8,18 @@ body{
 	text-align: center;
 }
 
-.flipbook-viewport{
-	overflow:hidden;
-	width:100%;
-	height:100%;
-}
-
-.flipbook-viewport .container{
-	position:absolute;
-	top:50%;
-	left:50%;
-	margin:auto;
-}
-
-.flipbook-viewport #flipbook{
+#flipbook{
+	position: absolute;
 	width:922px;
 	height:600px;
-	left:-461px;
-	top:-300px;
+  top: 50%;
+	left: 50%;
+	
+	transform: translate(-50%, -50%);
 }
 
-.flipbook-viewport .page{
+.page{
 	width:461px;
-	height:600px;
 	background-color:white;
 	background-repeat:no-repeat;
 	background-size:100% 100%;
@@ -44,28 +33,6 @@ body{
 	box-shadow:0 0 20px rgba(0,0,0,0.2);
 }
 
-.flipbook-viewport .page img{
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	margin:0;
-} 
-
-.flipbook-viewport .shadow{
-	-webkit-transition: -webkit-box-shadow 0.5s;
-	-moz-transition: -moz-box-shadow 0.5s;
-	-o-transition: -webkit-box-shadow 0.5s;
-	-ms-transition: -ms-box-shadow 0.5s;
-
-	-webkit-box-shadow:0 0 20px #ccc;
-	-moz-box-shadow:0 0 20px #ccc;
-	-o-box-shadow:0 0 20px #ccc;
-	-ms-box-shadow:0 0 20px #ccc;
-	box-shadow:0 0 20px #ccc;
-}
 
 .audio {
 	margin: 1rem auto;
@@ -75,11 +42,7 @@ body{
 	outline: 0;
 }
 
-#two {
-	display:	none;
-}
-
-#four {
+#two, #four {
 	display:	none;
 }
 
