--- a/css/basic.css
+++ b/css/basic.css
@@ -7,21 +7,68 @@ body{
 	padding:0;
 }
 
-
 #magazine{
 	height: 600px;
 	width: 900px;
+	/* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	margin: -300px 0 0 -450px;
 }
+
 #magazine .turn-page{
-	background-color:#ccc;
+	background-color:#ffffff;
 	background-size: 100% 100%;
+	border-left-width: 3px;
+	border-left-width: solid;
+}
+
+.p3, .p5, .p9 {
+	border-left-width: 3px;
+	border-left-style: solid;
+}
+
+/* Page 2 */
+
+.toc {
+	font-family: 'Crimson Text';
+	color: #312f2fe7;
+	margin-left: 4rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.title {
+	margin-left: 2rem;
+	text-decoration: underline;
+}
+
+.toc h4 {
+	cursor: pointer;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	margin: 10px; 
+	padding: 5px;
+	border-style: solid;
+	border-radius: 5%;
+	border-width: 1px;
+}
+
+.toc h4:hover {
+  box-shadow: 0 6px 16px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
 }
 
 
+/* Audio */
 
 .audio {
 	position: absolute;
 	margin: 0 auto;
+	bottom: 1rem;
 }
 
 .audio:focus {
