--- a/css/basic.css
+++ b/css/basic.css
@@ -1,7 +1,6 @@
 /* Basic sample */
 
 body{
-	/* overflow:hidden; */
 	background-color:#f3f3f3;
 	margin:0;
 	padding:0;
@@ -34,20 +33,22 @@ body{
 
 /* Page 2 */
 
-.toc {
+#toc {
+	text-align: center;
 	font-family: 'Crimson Text';
 	color: #312f2fe7;
-	margin-left: 4rem;
+	margin-left: 5rem;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
 
 .title {
+	margin: 1rem;
 	text-decoration: underline;
 }
 
-.toc h4 {
+#toc h4 {
 	cursor: pointer;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -58,7 +59,7 @@ body{
 	border-width: 1px;
 }
 
-.toc h4:hover {
+#toc h4:hover {
   box-shadow: 0 6px 16px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
 }
 
@@ -77,11 +78,4 @@ body{
 	outline: 0;
 }
 
-#two, #four {
-	/* display:	none; */
-}
-
-.hide {
-	display: hidden;
-}
 
