--- a/css/basic.css
+++ b/css/basic.css
@@ -1,6 +1,7 @@
 /* Basic sample */
 
 body{
+	overflow: hidden;
 	background-color:#f3f3f3;
 	margin:0;
 	padding:0;
@@ -13,10 +14,9 @@ body{
 	/* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 
 	position: absolute;
-	top: 50%;
-	left: 50%;
-
-	margin: -300px 0 0 -450px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #magazine .turn-page{
@@ -29,6 +29,19 @@ body{
 .p3, .p5, .p9 {
 	border-left-width: 3px;
 	border-left-style: solid;
+}
+
+#nav-menu {
+	position: absolute;
+	top: 1rem;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 2rem;
+}
+
+#nav-menu .fas {
+	cursor: pointer;
+	margin: 0 0.5rem;
 }
 
 /* Page 2 */
