--- a/css/basic.css
+++ b/css/basic.css
@@ -1,41 +1,44 @@
 /* Basic sample */
 
-body{
+body {
 	overflow: hidden;
-	background-color:#f3f3f3;
-	margin:0;
-	padding:0;
+	background-color: #f3f3f3;
+	margin: 0;
+	padding: 0;
 	text-align: center;
 }
 
-#magazine{
+#magazine {
 	height: 600px;
 	width: 900px;
 	/* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 
 	position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-#magazine .turn-page{
-	background-color:#ffffff;
+#magazine .turn-page {
+	background-color: #ffffff;
 	background-size: 100% 100%;
 	border-left-width: 3px;
 	border-left-width: solid;
 }
 
-.p3, .p5, .p9 {
+.p3,
+.p5,
+.p9 {
 	border-left-width: 3px;
 	border-left-style: solid;
 }
 
 #nav-menu {
+	z-index: 9999;
 	position: absolute;
 	top: 1rem;
 	left: 50%;
-	transform: translateX(-50%);
+	transform: translateX(-49%);
 	font-size: 2rem;
 }
 
@@ -47,48 +50,48 @@ body{
 /* Page 2 */
 
 #toc {
+	width: 75%;
 	text-align: center;
 	font-family: 'Crimson Text';
 	color: #312f2fe7;
-	margin-left: 5rem;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .title {
-	margin: 1rem;
+	margin: 2rem 0;
 	text-decoration: underline;
 }
 
-#toc h4 {
+.index {
 	cursor: pointer;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	margin: 10px; 
+	margin: 15px;
 	padding: 5px;
-	border-style: solid;
-	border-radius: 5%;
-	border-width: 1px;
 }
 
-#toc h4:hover {
-  box-shadow: 0 6px 16px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
-}
 
 
 /* Audio */
 
 .audio {
+	z-index: 9999;
 	position: absolute;
 	margin: 0 auto;
-	bottom: 1rem;
-	left: 50%;
-	transform: translateX(-50%)
+	top: 0.5rem;
+	left: 5%;
+	visibility: hidden;
 }
 
 .audio:focus {
 	outline: 0;
 }
 
-
+.dwn {
+	color: #242424;
+	font-size: 25px;
+	z-index: 9999; 
+	position: absolute;
+	right: 10%;
+	top: 2.5%;
+}
