--- a/css/basic.css
+++ b/css/basic.css
@@ -20,16 +20,23 @@ body {
 }
 
 #magazine .turn-page {
-	background-color: #ffffff;
+	background-color: #f3f3f3;
 	background-size: 100% 100%;
-	border-left-width: 3px;
-	border-left-width: solid;
 }
 
 .p3,
 .p5,
-.p9 {
-	border-left-width: 3px;
+.p9,
+.p13,
+.p17,
+.p21,
+.p25,
+.p29,
+.p33,
+.p35,
+.p37 {
+	background-color: white !important;
+	border-left-width: 1px;
 	border-left-style: solid;
 }
 
@@ -45,6 +52,18 @@ body {
 #nav-menu .fas {
 	cursor: pointer;
 	margin: 0 0.5rem;
+}
+
+#my-video {
+	transition: 'display 1s ease-in-out';
+	z-index: 9999;
+	width: 900px;
+	height: 600px;
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
 }
 
 /* Page 2 */
@@ -79,7 +98,7 @@ body {
 	position: absolute;
 	margin: 0 auto;
 	top: 0.5rem;
-	left: 5%;
+	left: 2%;
 	visibility: hidden;
 }
 
@@ -93,5 +112,5 @@ body {
 	z-index: 9999; 
 	position: absolute;
 	right: 10%;
-	top: 2.5%;
+	top: 1.2rem;
 }
