--- a/css/basic.css
+++ b/css/basic.css
@@ -43,7 +43,7 @@ body {
 #nav-menu {
 	z-index: 9999;
 	position: absolute;
-	top: 1rem;
+	top: 2rem;
 	left: 50%;
 	transform: translateX(-49%);
 	font-size: 2rem;
@@ -52,6 +52,7 @@ body {
 #nav-menu .fas {
 	cursor: pointer;
 	margin: 0 0.5rem;
+	color: rgb(62, 79, 82)
 }
 
 #my-video {
@@ -94,23 +95,44 @@ body {
 /* Audio */
 
 .audio {
+	margin: 0.5rem;
+	width: 220px;
+	height: 30px;
 	z-index: 9999;
-	position: absolute;
-	margin: 0 auto;
-	top: 0.5rem;
-	left: 2%;
-	visibility: hidden;
+	display: none;
+	float: right;
 }
 
 .audio:focus {
 	outline: 0;
 }
 
-.dwn {
-	color: #242424;
-	font-size: 25px;
-	z-index: 9999; 
+.dwn-container {
+	text-align: center;
+	z-index: 9999;
 	position: absolute;
-	right: 10%;
-	top: 1.2rem;
+	margin: 0.5rem;
+	min-width: 325px;
+	background: rgba(62, 79, 82, 0.781);
+	border-radius: 3px;;
+}
+
+.btn {
+	color: rgb(37, 36, 36);
+	text-decoration: none;
+	cursor: pointer;
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	background-color: rgb(235, 235, 235);
+	border-radius: 5%;
+	padding: 5px 10px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+#album-img {
+	float: left;
+	margin: 5px;
+	height: 80px;
+	width: 80px;
 }
