--- a/css/basic.css
+++ b/css/basic.css
@@ -11,10 +11,9 @@ body {
 #magazine {
 	height: 600px;
 	width: 900px;
-	/* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 
 	position: absolute;
-	top: 55%;
+	top: 54%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
@@ -52,7 +51,14 @@ body {
 #nav-menu .fas {
 	cursor: pointer;
 	margin: 0 0.5rem;
-	color: rgb(62, 79, 82)
+	color: rgba(62, 79, 82);
+}
+
+#nav-quote {
+	position: absolute;
+	right: 1rem;
+	top: 0.5rem;
+	width: 450px;
 }
 
 #my-video {
@@ -61,7 +67,7 @@ body {
 	width: 900px;
 	height: 600px;
 	position: absolute;
-	top: 55%;
+	top: 54%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: none;
@@ -113,8 +119,8 @@ body {
 	position: absolute;
 	margin: 0.5rem;
 	min-width: 325px;
-	background: rgba(62, 79, 82, 0.781);
-	border-radius: 3px;;
+	background: rgba(62, 79, 82);
+	border-radius: 3px;
 }
 
 .btn {
@@ -135,4 +141,12 @@ body {
 	margin: 5px;
 	height: 80px;
 	width: 80px;
+}
+
+
+#btm-quote {
+	font-size: 1.2rem;
+	position: absolute;
+	bottom: 0.5rem;
+	transform: translateX(-50%)
 }
