--- a/css/basic.css
+++ b/css/basic.css
@@ -1,4 +1,4 @@
-/* Basic sample */
+/* Layout and Content */
 
 body {
 	overflow: hidden;
@@ -39,6 +39,21 @@ body {
 	border-left-style: solid;
 }
 
+#my-video {
+	transition: 'display 1s ease-in-out';
+	z-index: 9999;
+	width: 900px;
+	height: 600px;
+	position: absolute;
+	top: 54%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+}
+
+
+/* Nav Menu */
+
 #nav-menu {
 	z-index: 9999;
 	position: absolute;
@@ -56,24 +71,14 @@ body {
 
 #nav-quote {
 	position: absolute;
-	right: 1rem;
+	font-size: 0.95rem;
+	right: 0.5rem;
 	top: 0.5rem;
 	width: 450px;
 }
 
-#my-video {
-	transition: 'display 1s ease-in-out';
-	z-index: 9999;
-	width: 900px;
-	height: 600px;
-	position: absolute;
-	top: 54%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	display: none;
-}
 
-/* Page 2 */
+/* Table of Contents */
 
 #toc {
 	width: 75%;
@@ -97,7 +102,6 @@ body {
 }
 
 
-
 /* Audio */
 
 .audio {
@@ -112,6 +116,9 @@ body {
 .audio:focus {
 	outline: 0;
 }
+
+
+/* download/audio container */
 
 .dwn-container {
 	text-align: center;
@@ -133,7 +140,7 @@ body {
 	background-color: rgb(235, 235, 235);
 	border-radius: 5%;
 	padding: 5px 10px;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #album-img {
@@ -141,12 +148,4 @@ body {
 	margin: 5px;
 	height: 80px;
 	width: 80px;
-}
-
-
-#btm-quote {
-	font-size: 1.2rem;
-	position: absolute;
-	bottom: 0.5rem;
-	transform: translateX(-50%)
 }
